--- a/test/fixtures/three.graphql/index.html
+++ b/test/fixtures/three.graphql/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Create & Query THREE object with GraphQL</title>
+    <title>Create & Query THREE objects with GraphQL</title>
     <script type="text/javascript" charset="utf-8" src="build.js"></script>
     <link rel="stylesheet" href="editor.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="graphiql.css" type="text/css" media="screen" charset="utf-8">
