--- a/test/fixtures/three.graphql/index.html
+++ b/test/fixtures/three.graphql/index.html
@@ -10,5 +10,6 @@
   <body>
     <section id="graphiql"> </section>
     <section id="viewport"> <canvas></canvas> </section>
+    <script type="text/javascript" charset="utf-8" src="query.js"></script>
   </body>
 </html>
